[package]
name = "txtx-cli"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[[bin]]
name = "txtx"
path = "src/main.rs"

[dependencies]
txtx-core = { workspace = true }
txtx-supervisor-ui = { workspace = true, optional = true }
txtx-cloud = { workspace = true }
txtx-serve = { workspace = true, optional = true }
txtx-addon-network-svm = { workspace = true }
txtx-addon-network-stacks = { workspace = true, optional = true }
txtx-addon-network-evm = { workspace = true }
txtx-addon-network-ovm = { workspace = true, optional = true }
txtx-addon-network-bitcoin = { workspace = true }
txtx-addon-telegram = { workspace = true }
txtx-addon-sp1 = { workspace = true, optional = true }
txtx-gql = { workspace = true }
hiro-system-kit = "0.3.1"
clap = { version = "4.4.6", features = ["derive"], optional = true }
clap_generate = { version = "3.0.3", optional = true }
ctrlc = { version = "3.2.2", optional = true }
dotenvy = "0.15.7"
serde = "1"
serde_json = "1"
serde_derive = "1"
ascii_table = "4.0.3"
itertools = "0.12.0"
unicode-width = "0.2.0"
ansi_term = "0.12.1"
atty = "0.2.14"
tokio = "1.37.0"
openssl = { version = "*", features = ["vendored"] }
openssl-sys = { version = "*", features = ["vendored"] }
dialoguer = "0.11.0"
console = "0.15.8"
convert_case = "0.6.0"
rusqlite = "0.31.0"
txtx-lsp = { path = "../txtx-lsp" }
tower-lsp = { version = "0.20.0" }
chrono = "0.4.38"
actix-web = "4"
indicatif = "0.18.0"
fern = "0.7.1"
log = "0.4.27"
lazy_static = "1.4.0"

[features]
default = ["cli"]
cli = ["clap", "clap_generate", "ctrlc", "hiro-system-kit/log"]
supervisor_ui = ["txtx-supervisor-ui"]
txtx_serve = ["txtx-serve"]
debug = ["hiro-system-kit/debug"]
release = ["hiro-system-kit/release"]
# Sp1 is pulling dependencies degrading our WASM compatibility
# This issue needs to be figured out.
sp1 = ["txtx-addon-sp1"]
ovm = ["txtx-addon-network-ovm"]
stacks = ["txtx-addon-network-stacks"]


[dev-dependencies]
test-case = "*"
