[package]
name = "txtx-cli"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[[bin]]
name = "txtx"
path = "src/main.rs"

[dependencies]
txtx-core = { workspace = true }
txtx-addon-kit = { workspace = true }
txtx-lsp = { path = "../txtx-lsp" }
txtx-supervisor-ui = { workspace = true, optional = true }
txtx-cloud = { workspace = true }
txtx-serve = { workspace = true, optional = true }
txtx-addon-network-svm = { workspace = true }
txtx-addon-network-evm = { workspace = true }
txtx-gql = { workspace = true }
hiro-system-kit = "0.3.1"
clap = { version = "4.4.6", features = ["derive"], optional = true }
ctrlc = { version = "3.2.2", optional = true }
dotenvy = "0.15.7"
serde = "1"
serde_json = "1"
serde_derive = "1"
serde_yml = "0.0.11"
ascii_table = "4.0.3"
itertools = "0.12.0"
unicode-width = "0.2.0"
ansi_term = "0.12.1"
atty = "0.2.14"
tokio = "1.37.0"
openssl = { version = "*", features = ["vendored"] }
openssl-sys = { version = "*", features = ["vendored"] }
dialoguer = "0.11.0"
console = "0.15.8"
tower-lsp = "0.20.0"
crossbeam-channel = "0.5"
chrono = "0.4.38"
actix-web = "4"
indicatif = "0.18.0"
fern = "0.7.1"
colored = "2.1"
log = "0.4.27"
lazy_static = "1.4.0"
thiserror = "1.0"
strum = { version = "0.26", features = ["derive"] }

[features]
default = ["cli", "supervisor_ui"]
cli = ["clap", "ctrlc", "hiro-system-kit/log"]
supervisor_ui = ["txtx-supervisor-ui"]
txtx_serve = ["txtx-serve"]
debug = ["hiro-system-kit/debug"]
release = ["hiro-system-kit/release"]


[dev-dependencies]
test-case = "*"
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1"
txtx-test-utils = { path = "../txtx-test-utils" }
tempfile = "3"
proptest = "1.4"
