[package]
name = "txtx-gql"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
txtx-addon-kit = { workspace = true }
futures = { version = "0.3.22", features = ["alloc"], default-features = false }
futures-enum = { version = "0.1.12", default-features = false }
uuid = { version = "1.6.1", features = ["serde", "v7"] }
juniper = { version = "0.16.1" }
juniper_codegen = { git = "https://github.com/graphql-rust/juniper", rev = "c0e1b3e" }
async-stream = "0.3.5"
tokio = "1.37.0"