[package]
name = "txtx-gql"
description = "Primitives for supervising Txtx runbooks execution"
version = "0.3.8"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# txtx-addon-kit = { version = "0.2.1" }
txtx-addon-kit = { workspace = true }
futures = { version = "0.3.22", features = ["alloc"], default-features = false }
juniper = { version = "0.16.2" }
juniper_codegen = { version = "0.16.0" }
# juniper_codegen = { git = "https://github.com/graphql-rust/juniper", rev = "c0e1b3e" }
async-stream = "0.3.5"
tokio = "1.37.0"
