[package]
name = "txtx-supervisor-ui"
description = "Crate for starting the txtx supervisor UI"
version = "0.2.9"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }


[dependencies]
txtx-addon-kit = { workspace = true }
txtx-core = { workspace = true }
txtx-gql = { workspace = true }
actix-cors = "0.7.0"
actix-web = "4"
hiro-system-kit = "0.3.1"
include_dir = "0.7.4"
juniper_actix = {version = "0.5.0", features = ["subscriptions"] }
juniper_graphql_ws = { version = "0.4.0", features = ["graphql-transport-ws"] }
mime_guess = "2.0.4"
serde = "1"
serde_json = "1"
serde_derive = "1"
tokio = "1.37.0"

[build-dependencies]
npm_rs="1.0.0"

[features]
default = ["bin_build"]
crates_build = []
bin_build = []
bypass_supervisor_build = []

[lib]
crate-type = ["lib", "cdylib"] 
