[package]
name = "txtx-supervisor-ui"
description = "Crate for starting the txtx supervisor UI"
version = "0.2.10"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }


[dependencies]
txtx-addon-kit = { workspace = true }
txtx-core = { workspace = true }
txtx-gql = { workspace = true }
actix-cors = "0.7.0"
actix-web = "4"
include_dir = "0.7.4"
juniper_actix = {version = "0.5.0", features = ["subscriptions"] }
juniper_graphql_ws = { version = "0.4.0", features = ["graphql-transport-ws"] }
mime_guess = "2.0.4"
tokio = "1.37.0"

[features]
default = []
bypass_supervisor_build = []

[lib]
crate-type = ["lib", "cdylib"] 

[build-dependencies]
flate2 = "1.1.2"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
tar = "0.4.44"
