[package]
name = "txtx-addon-network-svm"
description = "Primitives for executing Solana runbooks"
version = "0.3.1"
edition = { workspace = true }
license = "Apache-2.0"
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
# txtx-addon-kit = { version = "0.2.2", default-features = false }
txtx-addon-kit = { workspace = true, default-features = false }
txtx-addon-network-svm-types = { path = "../types" }
lazy_static = "1.4.0"
serde_json = "1.0.113"
serde = "1"
serde_derive = "1"
async-recursion = "1"
bincode = "1.3.3"
solana-sdk = { version = "2.2.1", features = ["borsh"] }
solana-message = { version = "2.2.1", features = ["serde"] }
solana-client = "2.2.1"
spl-associated-token-account = "6.0.0"
spl-token = "7.0.0"
spl-token-2022 = "7.0.0"
solana_idl = "0.2.0"
borsh_1_5_1 = { version = "1.5.1", package = "borsh" }
tiny-bip39 = "0.8.2"
convert_case = "0.6.0"

# Solana Record Service Dependencies
solana-record-service-client = "0.1.0"
# srs is using an old version of borsh, so we need to use the same version
borsh = { version = "0.10", package = "borsh", features = ["std"] }
kaigan = "0.2.6"

[dev-dependencies]
txtx-test-utils = { path = "../../../crates/txtx-test-utils" }

[features]
default = [
  "txtx-addon-kit/default"
]
wasm = [
  "txtx-addon-kit/wasm",
]

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"
