[package]
name = "txtx-addon-network-svm"
description = "Primitives for executing Solana runbooks"
version = "0.3.8"
edition = { workspace = true }
license = "Apache-2.0"
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
txtx-addon-kit = { workspace = true, default-features = false }
txtx-addon-network-svm-types = { path = "../types" }
lazy_static = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
bs58 = { workspace = true }
bincode = { workspace = true }
solana-message = { workspace = true }
solana-sha256-hasher = { workspace = true }
solana-signature = { workspace = true }
solana-instruction = { workspace = true }
solana-client = { workspace = true }
solana-hash = { workspace = true }
solana-packet = { workspace = true }
solana-keypair = { workspace = true }
solana-signer = { workspace = true }
solana-clock = { workspace = true }
solana-commitment-config = { workspace = true }
solana-sdk-ids = { workspace = true }
solana-account = { workspace = true }
solana-system-interface = { workspace = true }
solana-loader-v3-interface = { workspace = true, features = ["bincode"] }
solana-pubkey = { workspace = true }
solana-transaction = { workspace = true, features = ["verify"] }
spl-associated-token-account = { workspace = true }
spl-token = { workspace = true }
spl-token-2022 = { workspace = true }
solana_idl = { workspace = true }
borsh_1_5_1 = { workspace = true, package = "borsh" }
tiny-bip39 = { workspace = true }
convert_case = { workspace = true }

# Solana Record Service Dependencies
solana-record-service-client = { workspace = true }
borsh = { version = "0.10", package = "borsh", features = ["std"] }
# srs is using an old version of borsh, so we need to use the same version
kaigan = "=0.3.0"

[dev-dependencies]
txtx-test-utils = { path = "../../../crates/txtx-test-utils" }

[features]
default = ["txtx-addon-kit/default"]
wasm = ["txtx-addon-kit/wasm"]

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"
