[package]
name = "txtx-addon-network-svm"
description = "Primitives for executing Solana runbooks"
version = "0.3.12"
edition = { workspace = true }
license = "Apache-2.0"
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
# txtx-addon-kit = { version = "0.2.2", default-features = false }
txtx-addon-kit = { workspace = true, default-features = false }
txtx-addon-network-svm-types = { path = "../types" }
lazy_static = "1.4.0"
serde_json = "1.0.113"
serde = "1"
serde_derive = "1"
async-recursion = "1"
bs58 = "0.5.0"
bincode = "1.3.3"
solana-message = { version = "3.0.0", features = ["serde"] }
solana-client = "3.0.0"
solana-clock = "3.0.0"
solana-sdk-ids = "3.0.0"
solana-account = "3.0.0"
solana-keypair = "3.0.0"
solana-pubkey = { version = "3.0.0", features = ["serde", "borsh"] }
solana-hash = "3.0.0"
solana-transaction = { version = "3.0.0", features = ["verify"] }
solana-signature = "3.0.0"
solana-signer = "3.0.0"
solana-instruction = "3.0.0"
solana-packet = "3.0.0"
solana-sha256-hasher = "3.0.0"
solana-commitment-config = "3.0.0"
solana-loader-v3-interface = { version = "6.1.0", features = ["bincode"] }
solana-system-interface = { version = "2.0.0", features = ["bincode"] }
spl-associated-token-account-interface = "2.0.0"
spl-token-interface = "2.0.0"
spl-token-2022-interface = "2.0.0"
solana_idl = "0.2.0"
# borsh_1_5_1 = { version = "1.5.1", package = "borsh" }
tiny-bip39 = "0.8.2"
convert_case = "0.6.0"

# Solana Record Service Dependencies
solana-record-service-client = { version = "0.1.0", git = "https://github.com/solana-foundation/solana-record-service.git", rev = "ecc5a1633c180d095ad9660c7d1ba7bc77ac5280" }
# srs is using an old version of borsh, so we need to use the same version
borsh = { version = "1.5.7", package = "borsh", features = ["std"] }
kaigan = { version = "0.3.0", git = "https://github.com/metaplex-foundation/kaigan.git", rev = "8b8f45da59f75e40167c8f7f5e46ff29e0865fe1", features = ["serde"] }

[dev-dependencies]
txtx-test-utils = { path = "../../../crates/txtx-test-utils" }

[features]
default = ["txtx-addon-kit/default"]
wasm = ["txtx-addon-kit/wasm"]

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"
