[package]
name = "txtx-addon-network-svm-types"
description = "Types for executing Solana runbooks"
version = "0.3.7"
edition = { workspace = true }
license = "Apache-2.0"
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
borsh = { workspace = true }
convert_case = { workspace = true }
solana-pubkey = { workspace = true }
solana-clock = { workspace = true }
solana-message = { workspace = true }
solana-keypair = { workspace = true }
solana-signature = { workspace = true }
solana-transaction = { workspace = true }
solana-cli-output = { workspace = true }
solana-transaction-status-client-types = { workspace = true }
anchor-lang-idl = { workspace = true, features = ["convert"] }
txtx-addon-kit = { workspace = true, default-features = false }
lazy_static = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
test-case = { workspace = true }
